Implemented the delete session button
